--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ textarea::-webkit-scrollbar-thumb{
 .verde {
     background-color: #2BB673;
 }
-.concluido {
+.azul {
     background-color: #3879C1;
     
     padding: 4px;
